--- a/16-fast-react-pizza/src/index.css
+++ b/16-fast-react-pizza/src/index.css
@@ -47,4 +47,5 @@
   }
 }
 
-/* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
+https: //dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje
+;
